refactor: Remove console.log statements

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -587,6 +587,10 @@ video {
   white-space: pre;
 }
 
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
