--- a/public/css/input.css
+++ b/public/css/input.css
@@ -14,8 +14,10 @@ h3 {
 #ai_agents {
   background-image: linear-gradient(60deg, #f8b500, #f54748, #c02425, #00a8b5, #4a4e69, #9a031e, #03506f, #b9375e);
   color: transparent;
-  -webkit-background-clip: text; /* For Chrome and Edge */
-  background-clip: text; /* For Safari and Firefox */
+  -webkit-background-clip: text;
+  /* For Chrome and Edge */
+  background-clip: text;
+  /* For Safari and Firefox */
   animation: colorShift 10s ease-in-out infinite, dropDown 1s ease-in-out forwards;
   animation-direction: alternate;
   background-size: 700% 100%;
@@ -27,6 +29,7 @@ h3 {
   0% {
     background-position: 0 0;
   }
+
   100% {
     background-position: 100% 0;
   }
@@ -42,6 +45,7 @@ h3 {
     transform: translateY(-100%);
     opacity: 1;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
@@ -94,13 +98,54 @@ h3 {
   animation-delay: 2.5s;
   opacity: 0;
 }
+
 .source-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 0.5rem;
 }
+
 .source-item {
   border: 1px solid #e2e8f0;
-  padding: 1rem;
-  border-radius: 0.5rem;
+  border-radius: 0.375rem;
+  padding: 0.5rem;
+  overflow: hidden;
+  position: relative;
+  background-color: #ffffff;
+  /* Or whatever your background color is */
+}
+
+.source-item::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  /* Adjust this to control how much of the item is covered by the gradient */
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff);
+  pointer-events: none;
+  /* Ensures the overlay doesn't interfere with clicks */
+}
+
+.source-item h3 {
+  font-size: 0.75rem;
+  line-height: 1.2;
+  max-height: 2.4em;
+  overflow: hidden;
+}
+
+.source-item p {
+  font-size: 0.75rem;
+  line-height: 1.4;
+  max-height: 4.2em;
+  overflow: hidden;
+}
+
+#answer {
+  margin-top: -70px;
+  border: lightgrey 2px solid;
+  border-radius: 10px;
+  padding: 60px;
+  margin-bottom: -50px;
 }
