--- a/public/css/output.css
+++ b/public/css/output.css
@@ -559,8 +559,12 @@ video {
   margin-right: auto;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.-mt-\[50px\] {
+  margin-top: -50px;
+}
+
+.-mt-\[70px\] {
+  margin-top: -70px;
 }
 
 .mt-8 {
@@ -603,6 +607,12 @@ video {
   overflow: hidden;
 }
 
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .whitespace-pre-wrap {
   white-space: pre-wrap;
 }
@@ -619,11 +629,6 @@ video {
   border-width: 2px;
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
 .p-4 {
   padding: 1rem;
 }
@@ -637,9 +642,9 @@ video {
   padding-right: 1rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .text-center {
@@ -660,6 +665,11 @@ video {
   line-height: 1;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -668,9 +678,9 @@ video {
   font-weight: 800;
 }
 
-.text-white {
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -781,11 +791,50 @@ h3 {
 .source-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .source-item {
   border: 1px solid #e2e8f0;
-  padding: 1rem;
-  border-radius: 0.5rem;
+  border-radius: 0.375rem;
+  padding: 0.5rem;
+  overflow: hidden;
+  position: relative;
+  background-color: #ffffff;
+  /* Or whatever your background color is */
+}
+
+.source-item::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  /* Adjust this to control how much of the item is covered by the gradient */
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff);
+  pointer-events: none;
+  /* Ensures the overlay doesn't interfere with clicks */
+}
+
+.source-item h3 {
+  font-size: 0.75rem;
+  line-height: 1.2;
+  max-height: 2.4em;
+  overflow: hidden;
+}
+
+.source-item p {
+  font-size: 0.75rem;
+  line-height: 1.4;
+  max-height: 4.2em;
+  overflow: hidden;
+}
+
+#answer {
+  margin-top: -70px;
+  border: lightgrey 2px solid;
+  border-radius: 10px;
+  padding: 60px;
+  margin-bottom: -50px;
 }
