--- a/public/css/input.css
+++ b/public/css/input.css
@@ -149,3 +149,20 @@ h3 {
   padding: 60px;
   margin-bottom: -50px;
 }
+
+@keyframes scaleY {
+  0%, 100% { transform: scaleY(1); }
+  50% { transform: scaleY(1.5); }
+}
+
+#state div {
+  animation: scaleY 1s infinite;
+}
+
+#state div:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+#state div:nth-child(3) {
+  animation-delay: 0.4s;
+}
