chore: remove outline on input field

--- a/public/css/input.css
+++ b/public/css/input.css
@@ -99,6 +99,10 @@ h3 {
   opacity: 0;
 }
 
+#query:focus {
+  outline: none;
+}
+
 .source-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
