--- a/public/css/output.css
+++ b/public/css/output.css
@@ -558,10 +558,6 @@ video {
   position: absolute;
 }
 
-.-left-1\/2 {
-  left: -50%;
-}
-
 .left-1\/2 {
   left: 50%;
 }
@@ -579,20 +575,12 @@ video {
   margin-top: -70px;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
 }
 
 .block {
@@ -619,29 +607,20 @@ video {
   height: 4rem;
 }
 
-.w-32 {
-  width: 8rem;
+.w-3 {
+  width: 0.75rem;
 }
 
-.w-4 {
-  width: 1rem;
+.w-32 {
+  width: 8rem;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-3 {
-  width: 0.75rem;
-}
-
 .max-w-\[800px\] {
   max-width: 800px;
-}
-
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-x-1\/2 {
@@ -659,10 +638,6 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.justify-center {
-  justify-content: center;
 }
 
 .gap-x-2 {
@@ -698,11 +673,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gray-500 {
@@ -867,6 +837,10 @@ h3 {
 #query {
   animation-delay: 2.5s;
   opacity: 0;
+}
+
+#query:focus {
+  outline: none;
 }
 
 .source-grid {
